<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.calculator</groupId>
  <artifactId>calculatorProject</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>17</maven.compiler.release>

    <!-- Lib versions -->
    <selenium.version>4.25.0</selenium.version>
    <cucumber.version>7.15.0</cucumber.version>
    <testng.version>7.10.2</testng.version>
    <webdrivermanager.version>5.9.2</webdrivermanager.version>
    <axe.version>4.8.2</axe.version>
    <jackson.version>2.17.2</jackson.version>

    <!-- Logging (single binding, NO logback) -->
    <slf4j.version>2.0.13</slf4j.version>

    <surefire.version>3.2.5</surefire.version>
  </properties>

  <dependencies>
    <!-- Selenium 4 -->
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>${selenium.version}</version>
    </dependency>
    <!-- Transport module for Selenium 4.x -->
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-http</artifactId>
      <version>${selenium.version}</version>
    </dependency>

    <!-- WebDriverManager: no hard-coded driver paths -->
    <dependency>
      <groupId>io.github.bonigarcia</groupId>
      <artifactId>webdrivermanager</artifactId>
      <version>${webdrivermanager.version}</version>
    </dependency>

    <!-- Cucumber + TestNG -->
    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-java</artifactId>
      <version>${cucumber.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-testng</artifactId>
      <version>${cucumber.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>${testng.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- axe-core for accessibility checks -->
    <dependency>
      <groupId>com.deque.html.axe-core</groupId>
      <artifactId>selenium</artifactId>
      <version>${axe.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- Jackson for JSON (reporting helper) -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- Logging: SLF4J API + simple binding (NO logback) -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>${slf4j.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <!-- Java 17 -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <release>${maven.compiler.release}</release>
        </configuration>
      </plugin>

      <!-- Run Cucumber/TestNG; include your runner class pattern -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire.version}</version>
        <configuration>
          <includes>
            <!-- adjust if your runner name/package differs -->
            <include>**/*Runner.java</include>
            <include>**/*Test.java</include>
          </includes>
          <useModulePath>false</useModulePath>
          <properties>
            <property>
              <name>provider</name>
              <value>testng</value>
            </property>
          </properties>
          <!-- Quiet the Apache HttpClient wire logs; keep console clean -->
          <argLine>
            -Dorg.slf4j.simpleLogger.defaultLogLevel=info
            -Dorg.slf4j.simpleLogger.log.org.apache.hc.client5.http=warn
            -Dorg.slf4j.simpleLogger.log.org.apache.hc.client5.http.wire=off
            -Dorg.slf4j.simpleLogger.showDateTime=true
          </argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
